--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://marcinoles87.github.io/vp2024",
   "name": "vp2024",
   "version": "0.1.0",
   "private": true,
