--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 
 {
-  "homepage": "https://marcinoles87.github.io/vp2024",
+  "homepage": ".",
   "name": "vp2024",
   "version": "0.1.0",
   "private": true,
