--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
     "emailjs": "^4.0.3",
     "gh-pages": "^6.1.1",
@@ -16,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "reveal.js": "^5.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
